[project]
name = "ontology-marketplace-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "firebase-admin>=6.9.0",
    "functions-framework>=3.8.2",
    "neo4j>=5.28.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "rdflib>=7.3.0",
    "rdflib-neo4j>=1.1",
    "uvicorn>=0.34.2",
]
